k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: deepoverflow
  labels:
    name: deepoverflow
    environment: production
